# abpoa-rs

./: .gitmodules  Cargo.toml  LICENSE  NOTICE  README.md
.github/workflows/: ci.yml
abpoa/: Cargo.toml
abpoa-sys/: Cargo.toml  build.rs
abpoa-sys/src/: lib.rs
abpoa-sys/tests/: simple.rs  tables.rs
abpoa/benches/: example.rs  metadata.rs
abpoa/examples/: encoded_views.rs  example_c.rs  graph_io.rs  incremental_msa.rs  manual_graph_build.rs  multi_thread_aligners.rs  oneshot_seeding.rs  per_read_subalignments.rs  simulate_reads.rs  subgraph_slice_alignment.rs
abpoa/examples/shared/: sim.rs
abpoa/src/: aligner.rs  encode.rs  graph.rs  lib.rs  params.rs  result.rs  runtime.rs
abpoa/src/aligner/: core.rs  incremental.rs  io.rs  mod.rs  one_shot.rs  raw_alignment.rs  tests.rs
abpoa/src/output/: dot.rs  mod.rs  pog.rs
