[package]
name = "abpoa"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Safe Rust wrapper around the abPOA partial order aligner."

[dependencies]
libc = "0.2"
thiserror = "2"

[target.'cfg(unix)'.dependencies]
abpoa-sys = { path = "../abpoa-sys", version = "0.1.0" }

[dev-dependencies]
criterion = "0.8"
rand = "0.9"

[[bench]]
name = "example"
harness = false

[[bench]]
name = "metadata"
harness = false
