[package]
name = "abpoa"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Safe Rust wrapper around the abPOA partial order aligner."

[dependencies]
bitflags = "2"
libc = "0.2"
thiserror = "2"

[target.'cfg(unix)'.dependencies]
abpoa-sys = { path = "../abpoa-sys", version = "0.1.0" }

[dev-dependencies]
rand = "0.9"
